# sauhu

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
benches/: auto_window.rs  closest_slice.rs  pixel_minmax.rs  texture_upload_bytes.rs
docs/: PACS_TESTING.md  coregistration-implementation.md  mpr-implementation.md  roadmap-to-10.md
sauhu-common/: Cargo.toml
sauhu-common/src/: lib.rs
sauhu-common/src/pacs/: mod.rs  query.rs  retrieve.rs  scp.rs  scu.rs
src/: cache.rs  config.rs  hanging_protocol.rs  ipc.rs  lib.rs  main.rs
src/app/: background.rs  coregistration.rs  image_loading.rs  interaction.rs  mod.rs  mpr.rs  quick_fetch.rs
src/coregistration/: manager.rs  metrics.rs  mod.rs  optimizer.rs  pipeline.rs  transform.rs
src/db/: mod.rs  schema.rs
src/dicom/: anonymize.rs  geometry.rs  image.rs  mod.rs  mpr.rs  parser.rs  series_utils.rs  spatial.rs
src/dicom/mpr/: mod.rs  tests.rs
src/fusion/: colormap.rs  mod.rs
src/gpu/: coregistration.rs  mod.rs  renderer.rs  texture.rs
src/gpu/shaders/: coregistration.wgsl  fusion.wgsl  windowing.wgsl
src/pacs/: mod.rs
src/ui/: annotations.rs  database_window.rs  mod.rs  patient_sidebar.rs  thumbnail_cache.rs  viewport.rs  viewport_manager.rs
src/ui/database_window/: anonymize.rs  local_browser.rs  mod.rs  pacs_query.rs
testdata/: test_ct.dcm  test_mr.dcm
