[workspace]
members = ["sauhu-common"]

[package]
name = "sauhu"
version = "0.2.0"
edition = "2021"
authors = ["Mikko <mikko@liekki.xyz>"]
description = "Lightning-fast DICOM viewer for Linux"
license = "PolyForm-Noncommercial-1.0.0"
default-run = "sauhu"

# Feature gates:
# - codec-{jpeg2k,charls}: heavy C/C++ pixel-data decoders, on by default so
#   cargo build keeps the same decode coverage as before. A smaller build
#   can opt out with --no-default-features and drop ~2-3 MB of code.
# - test-binaries: developer-only CLIs (dicom_test, pacs_test) that drag in
#   no extra dependencies but add compile time on every cargo build. Off by
#   default; enable with --features test-binaries when you need them.
[features]
default = ["codec-jpeg2k", "codec-charls"]
codec-jpeg2k = ["dicom-pixeldata/openjp2"]
codec-charls = ["dicom-pixeldata/charls"]
test-binaries = []

[dependencies]
# Workspace
sauhu-common = { path = "sauhu-common" }

# UI
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "wayland",
    "x11",
] }
egui = "0.29"

# GPU (use eframe's wgpu re-export for compatibility)
bytemuck = { version = "1.14", features = ["derive"] }
wgpu = "22"
pollster = "0.4"

# DICOM
dicom = "0.9"
dicom-pixeldata = { version = "0.9", default-features = false, features = ["image", "native"] }
dicom-dictionary-std = "0.9"
dicom-ul = "0.9"  # DICOM Upper Layer protocol (C-FIND, C-MOVE, C-STORE)

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Image processing
image = "0.25"

# System
libc = "0.2"

# Utilities
indexmap = "2"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
anyhow = "1.0"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
directories = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"
rfd = "0.15"  # Native file dialogs
arboard = { version = "3.6.1", features = ["wayland-data-control"] }

[[bin]]
name = "sauhu"
path = "src/main.rs"

[[bin]]
name = "dicom_test"
path = "src/bin/dicom_test.rs"
required-features = ["test-binaries"]

[[bin]]
name = "pacs_test"
path = "src/bin/pacs_test.rs"
required-features = ["test-binaries"]

[[bin]]
name = "sauhu-agent-cli"
path = "src/bin/sauhu_agent_cli.rs"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "auto_window"
harness = false

[[bench]]
name = "pixel_minmax"
harness = false

[[bench]]
name = "closest_slice"
harness = false

[[bench]]
name = "texture_upload_bytes"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# Strip debug info from shipped binaries. Already had LTO + a single codegen
# unit; stripping takes the release binary the rest of the way down. Keep
# panic=unwind (the default) so user-facing crash reports still include a
# backtrace.
strip = "debuginfo"
